@@ -33,7 +33,7 @@ MooseX::Role::Parameterized = 0.18
 Try::Tiny                   = 0
 SQL::Translator             = 0.11005
 Test::More                  = 0.88
-Test::Exception             = 0
+Test::Fatal                 = 0.006
 DBD::SQLite                 = 1.35
 Carp                        = 0
 Carp::Clan                  = 0
