@@ -1,7 +1,7 @@
 #!perl
 
 use Test::More;
-use Test::Exception;
+use Test::Fatal qw(lives_ok dies_ok);
 
 use lib 't/lib';
 use DBICDHTest;
