@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
        - Test suite now is fully parallelizable
        - Switch ::ScriptHelpers to Sub::Exporter::Progressive
+       - Switch from Test::Exception to Test::Fatal
 
 0.002115  2012-07-10 13:36:35 America/Chicago
        - Make tests use actual temp files to make certain systems stop failing tests
